--- a/Advanced/dom/dom1/one.html
+++ b/Advanced/dom/dom1/one.html
@@ -11,3 +11,14 @@
       }
     </style>
   </head>
+<body class="bg-black">
+    <div>
+      <h1 class="heading" id="title">
+        DOM LEARNING <span style="display: none">Youtube</span>
+      </h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, in.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, in.
+      </p>
