--- a/Advanced/dom/dom1/one.html
+++ b/Advanced/dom/dom1/one.html
@@ -22,3 +22,17 @@
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, in.
       </p>
+     <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, in.
+      </p>
+      <input type="password" />
+
+      <ul>
+        <li class="list-item">one</li>
+        <li class="list-item">two</li>
+        <li class="list-item">three</li>
+      </ul>
+    </div>
+    <script src="./dom.js"></script>
+  </body>
+</html>
