--- a/Advanced/dom/dom3/three.html
+++ b/Advanced/dom/dom3/three.html
@@ -5,3 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM THREE</title>
   </head>
+  <body style="background-color: black; color: white"></body>
+
+  <script src="./dom2.js"></script>
+</html>
