--- a/Advanced/Events/events1/index.html
+++ b/Advanced/Events/events1/index.html
@@ -5,3 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Events</title>
   </head>
+  <body style="background-color: black; color: white">
+    <h2>Amazing Images</h2>
+    <div>
+      <ul id="images">
+        <li>
+          <img
+            src="https://images.pexels.com/photos/402028/pexels-photo-402028.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="404"
+            width="200"
+            id="japan"
+          />
+        </li>
