--- a/Advanced/Events/events1/index.html
+++ b/Advanced/Events/events1/index.html
@@ -17,3 +17,19 @@
             id="japan"
           />
         </li>
+        <li>
+          <img
+            src="https://images.pexels.com/photos/789750/pexels-photo-789750.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="404"
+            width="200"
+            id="india"
+          />
+        </li>
+        <li>
+          <img
+            src="https://images.pexels.com/photos/2382889/pexels-photo-2382889.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="404"
+            width="200"
+            id="bangladesh"
+          />
+        </li>
