--- a/Advanced/Events/events1/index.html
+++ b/Advanced/Events/events1/index.html
@@ -33,3 +33,19 @@
             id="bangladesh"
           />
         </li>
+        <li>
+          <img
+            src="https://images.pexels.com/photos/356844/pexels-photo-356844.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="404"
+            width="200"
+            id="usa"
+          />
+        </li>
+        <li>
+          <img
+            src="https://images.pexels.com/photos/109629/pexels-photo-109629.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="404"
+            width="200"
+            id="germany"
+          />
+        </li>
