--- a/Advanced/Events/events1/index.html
+++ b/Advanced/Events/events1/index.html
@@ -49,3 +49,19 @@
             id="germany"
           />
         </li>
+        <li>
+          <img
+            src="https://images.pexels.com/photos/532826/pexels-photo-532826.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="404"
+            width="200"
+            id="france"
+          />
+        </li>
+        <li>
+          <img
+            src="https://images.pexels.com/photos/1191548/pexels-photo-1191548.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="404"
+            width="200"
+            id="brazil"
+          />
+        </li>
