--- a/Advanced/Events/events1/index.html
+++ b/Advanced/Events/events1/index.html
@@ -65,3 +65,19 @@
             id="brazil"
           />
         </li>
+        <li>
+          <img
+            src="https://images.pexels.com/photos/71241/pexels-photo-71241.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="404"
+            width="200"
+            id="egypt"
+          />
+        </li>
+        <li>
+          <img
+            src="https://images.pexels.com/photos/4116708/pexels-photo-4116708.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="404"
+            width="200"
+            id="canada"
+          />
+        </li>
