--- a/Advanced/Events/events1/index.html
+++ b/Advanced/Events/events1/index.html
@@ -81,3 +81,26 @@
             id="canada"
           />
         </li>
+        <li>
+          <img
+            src="https://images.pexels.com/photos/1878293/pexels-photo-1878293.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="404"
+            width="200"
+            id="australia"
+          />
+        </li>
+        <li>
+          <a href="#">
+            <img
+              src="https://images.pexels.com/photos/5417844/pexels-photo-5417844.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="404"
+              width="200"
+              id="google"
+            />
+          </a>
+        </li>
+      </ul>
+    </div>
+  </body>
+  <script src="event.js"></script>
+</html>
