--- a/Projects/project1/index.html
+++ b/Projects/project1/index.html
@@ -7,3 +7,14 @@
     <link rel="stylesheet" href="style.css" />
     <title>JavaScript Background Color Switcher</title>
   </head>
+  <body>
+    <div class="canvas">
+      <!-- <a
+        style="
+          background-color: #fff;
+          padding: 10px 30px;
+          border-radius: 8px;
+          color: #212121;
+          text-decoration: none;
+          border: 2px solid #212121;
+        "
