--- a/Projects/project1/index.html
+++ b/Projects/project1/index.html
@@ -18,3 +18,6 @@
           text-decoration: none;
           border: 2px solid #212121;
         "
+        href="../index.html"
+        >Back to Home Page</a
+      > -->
