--- a/Projects/project1/index.html
+++ b/Projects/project1/index.html
@@ -21,3 +21,9 @@
         href="../index.html"
         >Back to Home Page</a
       > -->
+      <h1>Color Scheme Switcher</h1>
+      <span class="button" id="grey"></span>
+      <span class="button" id="green"></span>
+      <span class="button" id="blue"></span>
+      <span class="button" id="yellow"></span>
+      <h2>
