--- a/Projects/project1/index.html
+++ b/Projects/project1/index.html
@@ -27,3 +27,10 @@
       <span class="button" id="blue"></span>
       <span class="button" id="yellow"></span>
       <h2>
+        Try clicking on one of the colors above
+        <span>to change the background color of this page!</span>
+      </h2>
+    </div>
+    <script src="app.js"></script>
+  </body>
+</html>
