--- a/Projects/project2/index.html
+++ b/Projects/project2/index.html
@@ -7,3 +7,11 @@
     <link rel="stylesheet" href="style.css" />
     <title>BMI Calculator</title>
   </head>
+  <body>
+    <div class="container">
+      <h1>BMI Calculator</h1>
+      <form>
+        <p class="CM">
+          <label>Height in CM: </label
+          ><input class="input_CM" type="number" id="height" />
+        </p>
