--- a/Projects/project2/index.html
+++ b/Projects/project2/index.html
@@ -15,3 +15,15 @@
           <label>Height in CM: </label
           ><input class="input_CM" type="number" id="height" />
         </p>
+        <p class="KG">
+          <label>Weight in KG: </label
+          ><input class="input_KG" type="number" id="weight" />
+        </p>
+        <button>Calculate</button>
+        <p class="res">Result: <div id="results"></div><img id="myImage" src="" /></p>
+        <div class="guide" id="weight-guide">
+          <h3>BMI Weight Guide</h3>
+          <p class="Underweight">Under Weight = Less than 18.6</p>
+          <p class="Normal">Normal Range = 18.6 and 24.9</p>
+          <p class="Overweight">Overweight = Greater than 24.9</p>
+        </div>
