--- a/Projects/project2/index.html
+++ b/Projects/project2/index.html
@@ -27,3 +27,8 @@
           <p class="Normal">Normal Range = 18.6 and 24.9</p>
           <p class="Overweight">Overweight = Greater than 24.9</p>
         </div>
+      </form>
+    </div>
+  </body>
+  <script src="app.js"></script>
+</html>
