--- a/Projects/project3/index.html
+++ b/Projects/project3/index.html
@@ -7,3 +7,8 @@
     <link rel="stylesheet" href="style.css" />
     <title>Your Local Time</title>
   </head>
+  <body>
+    <div class="center">
+      <div id="banner"><span>Your local time</span></div>
+      <div id="clock"></div>
+    </div>
