--- a/Projects/project3/index.html
+++ b/Projects/project3/index.html
@@ -12,3 +12,6 @@
       <div id="banner"><span>Your local time</span></div>
       <div id="clock"></div>
     </div>
+   <script src="app.js"></script>
+  </body>
+</html>
