--- a/Projects/project4/index.html
+++ b/Projects/project4/index.html
@@ -7,3 +7,9 @@
     <title>Number Guessing Game</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <body style="background-color: #212121; color: #fff">
+    <div id="wrapper">
+      <h1>Number guessing game</h1>
+      <p>Try and guess a random number between 1 and 100.</p>
+      <p>You have 10 attempts to guess the right number.</p>
+      <br />
