--- a/Projects/project4/index.html
+++ b/Projects/project4/index.html
@@ -17,3 +17,8 @@
         <label for="guessField" id="guess">Guess a number</label>
         <input type="text" id="guessField" class="guessField" />
         <input
+          type="submit"
+          id="subt"
+          value="Submit Guess"
+          class="guessSubmit"
+        />
