--- a/Projects/project4/index.html
+++ b/Projects/project4/index.html
@@ -22,3 +22,10 @@
           value="Submit Guess"
           class="guessSubmit"
         />
+      </form>
+
+      <div class="resultParas">
+        <p>Previous Guesses: <span class="guesses"></span></p>
+        <p>Guesses Remaining: <span class="lastResult">10</span></p>
+        <p class="lowOrHi"></p>
+      </div>
