--- a/Projects/project4/index.html
+++ b/Projects/project4/index.html
@@ -29,3 +29,7 @@
         <p>Guesses Remaining: <span class="lastResult">10</span></p>
         <p class="lowOrHi"></p>
       </div>
+    </div>
+    <script src="app.js"></script>
+  </body>
+</html>
